stupid javadoc issue causing build fails