@@ -35,6 +35,8 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                    <release>${java.version}</release>
                     <detectLinks>true</detectLinks>
                     <dependencyLinks>
                         <dependencyLink>
